More options to customize training & bug fixes